Implement remove method in SinglyLinkedList